proj4/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC error RC
   16                | STRUCT error LC DefList RC
   17                | STRUCT error

   18 OptTag: ID
   19       | %empty

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | ID LP error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | error SEMI
   39     | RETURN error SEMI
   40     | IF LP error RP Stmt
   41     | IF LP error RP Stmt ELSE Stmt
   42     | WHILE LP error RP Stmt
   43     | Exp error
   44     | RETURN Exp error

   45 DefList: Def DefList
   46        | %empty

   47 Def: Specifier DecList SEMI
   48    | Specifier error SEMI

   49 DecList: Dec
   50        | Dec COMMA DecList

   51 Dec: VarDec
   52    | VarDec ASSIGNOP Exp

   53 Exp: Exp ASSIGNOP Exp
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP RP
   66    | Exp LB Exp RB
   67    | Exp DOT ID
   68    | ID
   69    | INT
   70    | FLOAT
   71    | Exp ASSIGNOP error
   72    | Exp AND error
   73    | Exp OR error
   74    | Exp RELOP error
   75    | Exp PLUS error
   76    | Exp MINUS error
   77    | Exp STAR error
   78    | Exp DIV error
   79    | NOT error

   80 Args: Exp COMMA Args
   81     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 15 16 17 25 38 39 40 41 42 43 44 48 71 72 73 74 75 76 77 78 79
    STRUCT <node> (258) 13 14 15 16 17
    RETURN <node> (259) 34 39 44
    IF <node> (260) 35 36 40 41
    ELSE <node> (261) 36 41
    WHILE <node> (262) 37 42
    TYPE <node> (263) 11
    INT <node> (264) 22 69
    FLOAT <node> (265) 70
    ID <node> (266) 18 20 21 23 24 25 64 65 67 68
    SEMI <node> (267) 4 5 7 8 32 34 38 39 47 48
    COMMA <node> (268) 10 26 50 80
    ASSIGNOP <node> (269) 52 53 71
    RELOP <node> (270) 56 74
    PLUS <node> (271) 57 75
    MINUS <node> (272) 58 62 76
    STAR <node> (273) 59 77
    DIV <node> (274) 60 78
    AND <node> (275) 54 72
    OR <node> (276) 55 73
    DOT <node> (277) 67
    NOT <node> (278) 63 79
    LP <node> (279) 23 24 25 35 36 37 40 41 42 61 64 65
    RP <node> (280) 23 24 25 35 36 37 40 41 42 61 64 65
    LB <node> (281) 22 66
    RB <node> (282) 22 66
    LC <node> (283) 13 15 16 29
    RC <node> (284) 13 15 16 29
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (34)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList <node> (35)
        on left: 9 10
        on right: 4 10
    Specifier <node> (36)
        on left: 11 12
        on right: 4 5 6 7 8 28 47 48
    StructSpecifier <node> (37)
        on left: 13 14 15 16 17
        on right: 12
    OptTag <node> (38)
        on left: 18 19
        on right: 13 15
    Tag <node> (39)
        on left: 20
        on right: 14
    VarDec <node> (40)
        on left: 21 22
        on right: 9 10 22 28 51 52
    FunDec <node> (41)
        on left: 23 24 25
        on right: 6 7
    VarList <node> (42)
        on left: 26 27
        on right: 23 26
    ParamDec <node> (43)
        on left: 28
        on right: 26 27
    CompSt <node> (44)
        on left: 29
        on right: 6 33
    StmtList <node> (45)
        on left: 30 31
        on right: 29 30
    Stmt <node> (46)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44
        on right: 30 35 36 37 40 41 42
    DefList <node> (47)
        on left: 45 46
        on right: 13 16 29 45
    Def <node> (48)
        on left: 47 48
        on right: 45
    DecList <node> (49)
        on left: 49 50
        on right: 47 50
    Dec <node> (50)
        on left: 51 52
        on right: 49 50
    Exp <node> (51)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 32 34 35 36 37 43 44 52 53 54 55 56 57 58 59 60 61 62 63 66 67 71 72 73 74 75 76 77 78 80 81
    Args <node> (52)
        on left: 80 81
        on right: 64 80


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC error RC
   16                | STRUCT . error LC DefList RC
   17                | STRUCT . error

    error  shift, and go to state 8
    ID     shift, and go to state 9

    LC  reduce using rule 19 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error SEMI

    error  shift, and go to state 14
    ID     shift, and go to state 15
    SEMI   shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   16 StructSpecifier: STRUCT error . LC DefList RC
   17                | STRUCT error .

    LC  shift, and go to state 20

    $default  reduce using rule 17 (StructSpecifier)


State 9

   18 OptTag: ID .
   20 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 20 (Tag)


State 10

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 21


State 11

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

    8 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 22


State 15

   21 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP
   25       | ID . LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 21 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 18

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   22 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 27
    LC    shift, and go to state 28

    CompSt  go to state 29


State 20

   16 StructSpecifier: STRUCT error LC . DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 31
    Def              go to state 32


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 33
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    RC  reduce using rule 46 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 34
    Def              go to state 32


State 22

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 23

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP
   25       | ID LP . error RP

    error   shift, and go to state 35
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2
    RP      shift, and go to state 36

    Specifier        go to state 37
    StructSpecifier  go to state 7
    VarList          go to state 38
    ParamDec         go to state 39


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 40

    ExtDecList  go to state 41
    VarDec      go to state 18


State 26

   22 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 42


State 27

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 28

   29 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 43
    Def              go to state 32


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   47 Def: Specifier . DecList SEMI
   48    | Specifier . error SEMI

    error  shift, and go to state 44
    ID     shift, and go to state 40

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


State 31

   16 StructSpecifier: STRUCT error LC DefList . RC

    RC  shift, and go to state 48


State 32

   45 DefList: Def . DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 49
    Def              go to state 32


State 33

   15 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 50


State 34

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 51


State 35

   25 FunDec: ID LP error . RP

    RP  shift, and go to state 52


State 36

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 37

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 40

    VarDec  go to state 53


State 38

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


State 39

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 27 (VarList)


State 40

   21 VarDec: ID .

    $default  reduce using rule 21 (VarDec)


State 41

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 42

   22 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 56


State 43

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 57
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 28

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


State 44

   48 Def: Specifier error . SEMI

    SEMI  shift, and go to state 71


State 45

   22 VarDec: VarDec . LB INT RB
   51 Dec: VarDec .
   52    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 72
    LB        shift, and go to state 26

    $default  reduce using rule 51 (Dec)


State 46

   47 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 73


State 47

   49 DecList: Dec .
   50        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 49 (DecList)


State 48

   16 StructSpecifier: STRUCT error LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 49

   45 DefList: Def DefList .

    $default  reduce using rule 45 (DefList)


State 50

   15 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 51

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 52

   25 FunDec: ID LP error RP .

    $default  reduce using rule 25 (FunDec)


State 53

   22 VarDec: VarDec . LB INT RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 28 (ParamDec)


State 54

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 55

   26 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 37
    StructSpecifier  go to state 7
    VarList          go to state 75
    ParamDec         go to state 39


State 56

   22 VarDec: VarDec LB INT RB .

    $default  reduce using rule 22 (VarDec)


State 57

   38 Stmt: error . SEMI

    SEMI  shift, and go to state 76


State 58

   34 Stmt: RETURN . Exp SEMI
   39     | RETURN . error SEMI
   44     | RETURN . Exp error

    error  shift, and go to state 77
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 78


State 59

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP error RP Stmt
   41     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 79


State 60

   37 Stmt: WHILE . LP Exp RP Stmt
   42     | WHILE . LP error RP Stmt

    LP  shift, and go to state 80


State 61

   69 Exp: INT .

    $default  reduce using rule 69 (Exp)


State 62

   70 Exp: FLOAT .

    $default  reduce using rule 70 (Exp)


State 63

   64 Exp: ID . LP Args RP
   65    | ID . LP RP
   68    | ID .

    LP  shift, and go to state 81

    $default  reduce using rule 68 (Exp)


State 64

   62 Exp: MINUS . Exp

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 82


State 65

   63 Exp: NOT . Exp
   79    | NOT . error

    error  shift, and go to state 83
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 84


State 66

   61 Exp: LP . Exp RP

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 85


State 67

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 68

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 86


State 69

   30 StmtList: Stmt . StmtList

    error   shift, and go to state 57
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 28

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 87
    Stmt      go to state 69
    Exp       go to state 70


State 70

   32 Stmt: Exp . SEMI
   43     | Exp . error
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID
   71    | Exp . ASSIGNOP error
   72    | Exp . AND error
   73    | Exp . OR error
   74    | Exp . RELOP error
   75    | Exp . PLUS error
   76    | Exp . MINUS error
   77    | Exp . STAR error
   78    | Exp . DIV error

    error     shift, and go to state 88
    SEMI      shift, and go to state 89
    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99


State 71

   48 Def: Specifier error SEMI .

    $default  reduce using rule 48 (Def)


State 72

   52 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 100


State 73

   47 Def: Specifier DecList SEMI .

    $default  reduce using rule 47 (Def)


State 74

   50 DecList: Dec COMMA . DecList

    ID  shift, and go to state 40

    VarDec   go to state 45
    DecList  go to state 101
    Dec      go to state 47


State 75

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 76

   38 Stmt: error SEMI .

    $default  reduce using rule 38 (Stmt)


State 77

   39 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 102


State 78

   34 Stmt: RETURN Exp . SEMI
   44     | RETURN Exp . error
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID
   71    | Exp . ASSIGNOP error
   72    | Exp . AND error
   73    | Exp . OR error
   74    | Exp . RELOP error
   75    | Exp . PLUS error
   76    | Exp . MINUS error
   77    | Exp . STAR error
   78    | Exp . DIV error

    error     shift, and go to state 103
    SEMI      shift, and go to state 104
    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99


State 79

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt
   40     | IF LP . error RP Stmt
   41     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 105
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 106


State 80

   37 Stmt: WHILE LP . Exp RP Stmt
   42     | WHILE LP . error RP Stmt

    error  shift, and go to state 107
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 108


State 81

   64 Exp: ID LP . Args RP
   65    | ID LP . RP

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66
    RP     shift, and go to state 109

    Exp   go to state 110
    Args  go to state 111


State 82

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   62    | MINUS Exp .
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID
   71    | Exp . ASSIGNOP error
   72    | Exp . AND error
   73    | Exp . OR error
   74    | Exp . RELOP error
   75    | Exp . PLUS error
   76    | Exp . MINUS error
   77    | Exp . STAR error
   78    | Exp . DIV error

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95
    DOT   shift, and go to state 98
    LB    shift, and go to state 99

    $default  reduce using rule 62 (Exp)


State 83

   79 Exp: NOT error .

    $default  reduce using rule 79 (Exp)


State 84

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   63    | NOT Exp .
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID
   71    | Exp . ASSIGNOP error
   72    | Exp . AND error
   73    | Exp . OR error
   74    | Exp . RELOP error
   75    | Exp . PLUS error
   76    | Exp . MINUS error
   77    | Exp . STAR error
   78    | Exp . DIV error

    DOT  shift, and go to state 98
    LB   shift, and go to state 99

    $default  reduce using rule 63 (Exp)


State 85

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   61    | LP Exp . RP
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID
   71    | Exp . ASSIGNOP error
   72    | Exp . AND error
   73    | Exp . OR error
   74    | Exp . RELOP error
   75    | Exp . PLUS error
   76    | Exp . MINUS error
   77    | Exp . STAR error
   78    | Exp . DIV error

    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    RP        shift, and go to state 112
    LB        shift, and go to state 99


State 86

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 87

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 88

   43 Stmt: Exp error .

    $default  reduce using rule 43 (Stmt)


State 89

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 90

   53 Exp: Exp ASSIGNOP . Exp
   71    | Exp ASSIGNOP . error

    error  shift, and go to state 113
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 114


State 91

   56 Exp: Exp RELOP . Exp
   74    | Exp RELOP . error

    error  shift, and go to state 115
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 116


State 92

   57 Exp: Exp PLUS . Exp
   75    | Exp PLUS . error

    error  shift, and go to state 117
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 118


State 93

   58 Exp: Exp MINUS . Exp
   76    | Exp MINUS . error

    error  shift, and go to state 119
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 120


State 94

   59 Exp: Exp STAR . Exp
   77    | Exp STAR . error

    error  shift, and go to state 121
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 122


State 95

   60 Exp: Exp DIV . Exp
   78    | Exp DIV . error

    error  shift, and go to state 123
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 124


State 96

   54 Exp: Exp AND . Exp
   72    | Exp AND . error

    error  shift, and go to state 125
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 126


State 97

   55 Exp: Exp OR . Exp
   73    | Exp OR . error

    error  shift, and go to state 127
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 128


State 98

   67 Exp: Exp DOT . ID

    ID  shift, and go to state 129


State 99

   66 Exp: Exp LB . Exp RB

    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63
    MINUS  shift, and go to state 64
    NOT    shift, and go to state 65
    LP     shift, and go to state 66

    Exp  go to state 130


State 100

   52 Dec: VarDec ASSIGNOP Exp .
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID
   71    | Exp . ASSIGNOP error
   72    | Exp . AND error
   73    | Exp . OR error
   74    | Exp . RELOP error
   75    | Exp . PLUS error
   76    | Exp . MINUS error
   77    | Exp . STAR error
   78    | Exp . DIV error

    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    LB        shift, and go to state 99

    $default  reduce using rule 52 (Dec)


State 101

   50 DecList: Dec COMMA DecList .

    $default  reduce using rule 50 (DecList)


State 102

   39 Stmt: RETURN error SEMI .

    $default  reduce using rule 39 (Stmt)


State 103

   44 Stmt: RETURN Exp error .

    $default  reduce using rule 44 (Stmt)


State 104

   34 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 105

   40 Stmt: IF LP error . RP Stmt
   41     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 131


State 106

   35 Stmt: IF LP Exp . RP Stmt
   36     | IF LP Exp . RP Stmt ELSE Stmt
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID
   71    | Exp . ASSIGNOP error
   72    | Exp . AND error
   73    | Exp . OR error
   74    | Exp . RELOP error
   75    | Exp . PLUS error
   76    | Exp . MINUS error
   77    | Exp . STAR error
   78    | Exp . DIV error

    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    RP        shift, and go to state 132
    LB        shift, and go to state 99


State 107

   42 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 133


State 108

   37 Stmt: WHILE LP Exp . RP Stmt
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID
   71    | Exp . ASSIGNOP error
   72    | Exp . AND error
   73    | Exp . OR error
   74    | Exp . RELOP error
   75    | Exp . PLUS error
   76    | Exp . MINUS error
   77    | Exp . STAR error
   78    | Exp . DIV error

    ASSIGNOP  shift, and go to state 90
    RELOP     shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    AND       shift, and go to state 96
    OR        shift, and go to state 97
    DOT       shift, and go to state 98
    RP        shift, and go to state 134
    LB        shift, and go to state 99


State 109

   65 Exp: ID LP RP .

    $default  reduce using rule 65 (Exp)


State 110
